Updates to about page

--- a/about.html
+++ b/about.html
@@ -46,9 +46,9 @@
           <h2>Fast Forward</h2>
           <p>After studying social psychology and criminology, I spent 10 years helping businesses be more productive through efficient operations and project management. Whenever I had an opportunity to strategize and design a product, I found my problem solving skills firing on all cylinders and I was deeply drawn to the creative aspects of conceptualizing new solutions, while still passionate about the research and analysis side as well.</p>
           <h2>Users First</h2>
-          <p>My background in psychology taught me that driving a digital outcome couldnt occur with blinders on. I witnesses many businesses pursuing outcomes from their clients, employees and stakeholder without prioritizing their experience prior to a desired outcome. The principals of user centered experience design aligned completely with my instincts about driving successful business solutions.</p>
+          <p>My background in psychology taught me that driving a digital outcome couldn't occur with blinders on. I observed many businesses pursuing outcomes from their clients, employees and stakeholders without considering the impact of their experience prior to a desired result. The principals of user centered experience design aligned completely with my instincts about driving successful business solutions.</p>
           <h2>A Designer at Heart</h2>
-          <p>So I decided to build upon my existing skills and pursue UX design full time  by participating in a design program. Today I  design solutions that ensure that user interest and productivity work in synergy.</p>
+          <p>So I decided to build upon my existing skills and experience and pursue UX design full time  by participating in a design program. Today I  design solutions that ensure that user interest and productivity work in synergy.</p>
 
         </div>
       </section>
