--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 
         <div class="about-page-details">
           <p>Growing up on Long Island in the 90s, we relished the deliciousness of a fresh pizza. You remember the kind - cheesy, oily, the kind that came with the little white pizza table to protect its gooey goodness. When the town was slow to repair a downed street sign at our corner, our pizza deliveries stopped showing up.</p>
-          <p>After doing a bit of digging, we discovered that the street sign was the core of our problem. So my mother and I went out out, shovels in tow, to repair it. She taught me that our street sign, our community and our pizza were our responsibility and we would wait for someone else to fix it or we could step up and do so ourselves. </p>
+          <p>After doing a bit of digging, we discovered that the street sign was the core of our problem. So my mother and I went out, shovels in tow, to repair it. She taught me that our street sign, our community and our pizza were our responsibility and we could wait for someone else to fix it or we could step up and do so ourselves. </p>
           <p>This sowed the seed for my interest in problem solving. I grew passionate about looking at any challenge I encountered and exploring how similar issues impacted others and how we could better solve them.</p>
           <h2>Fast Forward</h2>
           <p>After studying social psychology and criminology, I spent 10 years helping businesses be more productive through efficient operations and project management. Whenever I had an opportunity to strategize and design a product, I found my problem solving skills firing on all cylinders and I was deeply drawn to the creative aspects of conceptualizing new solutions, while still passionate about the research and analysis side as well.</p>
