Coded bottom nav Top button &  added prototype link at end

--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -33,6 +33,7 @@
 
         <section class="project-page-hero">
             <div class="verve-project-image">
+              <a name="top"></a>
               <img class="verve-image" src="images/verve-thumbnail.png" width="323" height="323" alt="Verve demo">
             </div>
             <div class="project-details">
@@ -586,6 +587,7 @@
             <div class="revision screens">
               <img class="final-revision-screens" src="images/Final-Revisions/final-revisions.png" alt="final revisions view">
             </div>
+            <button class = "endprototype" onClick="window.open('https://www.figma.com/proto/Dw8ix85jmlUZQ9pM8PRQQA/Verve-Final-Deliverables-Mockup-Prototype-and-Style-Guide?node-id=47269%3A12&viewport=116%2C260%2C0.015625&scaling=scale-down');">View the Prototype</button>
           </div>
           </section>
 
@@ -602,9 +604,12 @@
         </section>
 
         <div class="bottom-nav">
-
-          <img class="top" src="images/icons/top.png" alt="Top icon">
-          <h4 class="top-text" >top</h4>
+          <a href="#top">
+            <img class="top" src="images/icons/top.png" alt="Top icon">
+          </a>
+          <a href="#top">
+            <h4 class="top-text" >top</h4>
+          </a>
           <h4 class="next-text">next</h4>
           <img class="next" src="images/icons/right-arrow.png" alt="Next Icon">
 
