Added closing statement.

--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -584,7 +584,9 @@
             <div class="revision screens">
               <img class="empty-state-dashboards" src="images/Final-Revisions/dashboard.png" alt="empty state dashboard evolution">
             </div>
-            <p>I also adjusted the photo and file uploading screens to adhere to iOS Human Interface Guidelines to avoid adding an unfamiliar process with minimal experience value. At this stage, the product met all of the needs of the initial client brief, the needs revealed through user research, accounted for the feedback received in testing and critiques and incorporated Human Interface Guidelines. </p>
+            <p>I also adjusted the photo and file uploading screens to adhere to iOS Human Interface Guidelines to avoid adding an unfamiliar process with minimal experience value. At this stage, the product met all of the needs of the initial client brief, the needs revealed through user research, accounted for the feedback received in testing and critiques and incorporated Human Interface Guidelines. </p>  
+            <h3> In Closing</h3>
+            <p>Verve satisfies the client brief by successfully pursuing a unique entry into the cloud storage market for a wellness and productivity-minded consumer. With the client brief providing a strong framework within which to explore and develop the idea, the end product's design  is truly driven by user research and testing to that the client sees optimal results in monetizing the product.</p>
             <div class="revision screens">
               <img class="final-revision-screens" src="images/Final-Revisions/final-revisions.png" alt="final revisions view">
             </div>
