Updated sitewide footer and Verve type graphic

--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -620,6 +620,7 @@
 
         <footer class="verve-footer">
           <h1 class="verve-footer-header">Let's Work Together!</h1>
+          <p class = "verve-footer-email">hello@jessblanchard.design</p>
           <div class="verve-footer-links">
               <a href="https://www.linkedin.com/in/jessdesignedit">
                 <img src=images/icons/icons8-linkedin-2-500.png alt="LinkedIn logo">
@@ -633,11 +634,11 @@
               <a href="https://www.twitter.com/jesstribble">
                 <img src= images/icons/icons8-twitter-500.png alt="Twitter logo">
                 </a>
-              <a href="mailto:jessicahtribble@gmail.com">
+              <!-- <a href="mailto:jessicahtribble@gmail.com">
                 <img src=images/icons/icons8-email-envelope-500.png alt="Email Icon">
-                </a>
+                </a> -->
           </div>
-          <p class="verve-footer-text">designed and developed by Jessica Blanchard</p>
+          <p class="verve-footer-text">Copyright © 2019, designed and developed by Jessica Blanchard</p>
         </footer>
 
   </body>
