--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 
       <footer class="footer">
         <h1 class="footer-header">Let's Work Together!</h1>
+        <p class = "footer-email">hello@jessblanchard.design</p>
         <div class="footer-links">
             <a href="https://www.linkedin.com/in/jessdesignedit">
               <img src="images/icons/icons8-linkedin-2-500.png" alt="LinkedIn logo">
@@ -84,11 +85,11 @@
             <a href="https://www.twitter.com/jesstribble">
               <img src= "images/icons/icons8-twitter-500.png" alt="Twitter logo">
               </a>
-            <a href="mailto:jessicahtribble@gmail.com">
+            <!-- <a href="mailto:jessicahtribble@gmail.com">
               <img src="images/icons/icons8-email-envelope-500.png" alt="Mail Icon">
-              </a>
+              </a> -->
         </div>
-        <p class="footer-text">designed and developed by Jessica Blanchard</p>
+        <p class="footer-text">Copyright © 2019, designed and developed by Jessica Blanchard</p>
       </footer>
 
   </body>
