--- a/about.html
+++ b/about.html
@@ -69,9 +69,9 @@
             <a href="https://www.twitter.com/jesstribble">
               <img src= images/icons/icons8-twitter-500.png alt="Twitter logo">
               </a>
-            <!-- <a href="mailto:jessicahtribble@gmail.com">
+            <a href="contact.html">
               <img src=images/icons/icons8-email-envelope-500.png alt="Mail icon">
-              </a> -->
+              </a>
         </div>
         <p class="footer-text">Copyright © 2019, designed and developed by Jessica Blanchard</p>
       </footer>
