--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -634,9 +634,9 @@
               <a href="https://www.twitter.com/jesstribble">
                 <img src= images/icons/icons8-twitter-500.png alt="Twitter logo">
                 </a>
-              <!-- <a href="mailto:jessicahtribble@gmail.com">
+              <a href="contact.html">
                 <img src=images/icons/icons8-email-envelope-500.png alt="Email Icon">
-                </a> -->
+                </a>
           </div>
           <p class="verve-footer-text">Copyright © 2019, designed and developed by Jessica Blanchard</p>
         </footer>
