updated layout of wireframes, hifi-mockups and final revisions

--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -453,12 +453,12 @@
         <img class="early-image" src="images/Sketches-and-Wireframes/early-sketch-wireframe.png" alt="Early Sketches and Wireframes">
 
         <div class="wireframes">
-            <img class="wireframe1" src="images/Sketches-and-Wireframes/activity-wireframe.png" alt="Wireframe 1">
-            <img class="wireframe2" src="images/Sketches-and-Wireframes/existing-user-dashboard-wireframe.png" alt="Wireframe 2">
-            <img class="wireframe3" src="images/Sketches-and-Wireframes/new-user-dashboard-wireframe.png" alt="Wireframe 3">
-            <img class="wireframe4" src="images/Sketches-and-Wireframes/new-user-onboarding.png" alt="Wireframe 4">
-            <img class="wireframe5" src="images/Sketches-and-Wireframes/note-wireframe.png" alt="Wireframe 5">
-            <img class="wireframe6" src="images/Sketches-and-Wireframes/product-wireframe.png" alt="Wireframe 6">
+            <img class="wireframe4" src="images/Sketches-and-Wireframes/new-user-onboarding.png" alt="Landing Page Wireframe">
+            <img class="wireframe3" src="images/Sketches-and-Wireframes/new-user-dashboard-wireframe.png" alt="Empty State Dashboard Wireframe">
+            <img class="wireframe2" src="images/Sketches-and-Wireframes/existing-user-dashboard-wireframe.png" alt="Existing User Dashboard Wireframe">
+            <img class="wireframe6" src="images/Sketches-and-Wireframes/product-wireframe.png" alt="Product View Wireframe">
+            <img class="wireframe1" src="images/Sketches-and-Wireframes/activity-wireframe.png" alt="Activity View wireframe">
+            <img class="wireframe5" src="images/Sketches-and-Wireframes/note-wireframe.png" alt="Note View Wireframe">
         </div>
 
         <button class="all-wireframes" onClick="window.open('https://www.figma.com/file/21um8xfMV89zpfGq7uyW2w/Verve-Wireframes-and-Lofi-Prototype?node-id=46378%3A4647');">View all Wireframes</button>
@@ -542,13 +542,16 @@
             <h3>High Fidelity Mockups</h3>
             <p>As I created hi-fi mockups, I  discovered design elements that previously seemed to recede into the background of the app, but in actuality needed to be considered as part of a design pattern. Design features like process tracking dots and text captioning on menu icons, needed to be considered as I was developing  high fidelity mockups.</p>
             <div class=hifi-group>
-              <img class="hifi-pic" src="images/HiFi-Mockups/activity-mockup.png" alt="Activity Mockup">
-              <img class="hifi-pic" src="images/HiFi-Mockups/existing-user-dashboard-mockup.png" alt="Existign User Dashboard Mockup">
-              <img class="hifi-pic" src="images/HiFi-Mockups/new-user-dashboard-mockup.png" alt="New User Dashboard Mockup">
               <img class="hifi-pic" src="images/HiFi-Mockups/landing-page-mockup.png" alt="Landing Page Mockup">
-              <img class="hifi-pic" src="images/HiFi-Mockups/note-view-mockup.png" alt="Note View Mockup">
+              <img class="hifi-pic" src="images/HiFi-Mockups/new-user-dashboard-mockup.png" alt="New User Dashboard Mockup">
+              <img class="hifi-pic" src="images/HiFi-Mockups/existing-user-dashboard-mockup.png" alt="Existing User Dashboard Mockup">
               <img class="hifi-pic" src="images/HiFi-Mockups/product-mockup.png" alt="Product Mockup">
+              <img class="hifi-pic" src="images/HiFi-Mockups/activity-mockup.png" alt="Activity Mockup">
+              <img class="hifi-pic" src="images/HiFi-Mockups/note-view-mockup.png" alt="Note View Mockup">
             </div>
+
+            <button class="all-hifi" onClick="window.open('https://www.figma.com/file/yUBzhV5qy2T0qpGQpnRr6j/Verve-Hi-Fidelity-Mockup-and-Prototype?node-id=46378%3A4647');">View all Hi-Fi Mockups</button>
+
           </div>
           <div class="preference-tests">
             <h3>Preference Testing</h3>
@@ -587,8 +590,14 @@
             <p>I also adjusted the photo and file uploading screens to adhere to iOS Human Interface Guidelines to avoid adding an unfamiliar process with minimal experience value. At this stage, the product met all of the needs of the initial client brief, the needs revealed through user research, accounted for the feedback received in testing and critiques and incorporated Human Interface Guidelines. </p>
             <h3> In Closing</h3>
             <p>Verve satisfies the client brief by successfully pursuing a unique entry into the cloud storage market for a wellness and productivity-minded consumer. With the client brief providing a strong framework within which to explore and develop the idea, the end product's design  is truly driven by user research and testing so that the client sees optimal results in monetizing the product.</p>
-            <div class="revision screens">
-              <img class="final-revision-screens" src="images/Final-Revisions/final-revisions.png" alt="final revisions view">
+            <div class="revision-screens">
+              <img class="hifi-pic" src="images/Final-Revisions/landing-page.png" alt="Landing Page Mockup">
+              <img class="hifi-pic" src="images/Final-Revisions/new-user-dashboard.png" alt="Empty State Dashboard Mockup">
+              <img class="hifi-pic" src="images/Final-Revisions/existing-user.png" alt="Existing User Dashboard Mockup">
+              <img class="hifi-pic" src="images/Final-Revisions/product-view.png" alt="Product Page Mockup">
+              <img class="hifi-pic" src="images/Final-Revisions/activity-detail-view.png" alt="Activity View Mockup">
+              <img class="hifi-pic" src="images/Final-Revisions/note-view.png" alt="Note View Mockup">
+
             </div>
             <button class = "endprototype" onClick="window.open('https://www.figma.com/proto/Dw8ix85jmlUZQ9pM8PRQQA/Verve-Final-Deliverables-Mockup-Prototype-and-Style-Guide?node-id=47269%3A12&viewport=116%2C260%2C0.015625&scaling=scale-down');">View the Prototype</button>
           </div>
