set footer links to open in a new window.

--- a/about.html
+++ b/about.html
@@ -57,21 +57,21 @@
         <h1 class="footer-header">Let's Work Together!</h1>
         <p class = "footer-email">hello@jessblanchard.design</p>
         <div class="footer-links">
-            <a href="https://www.linkedin.com/in/jessdesignedit">
-              <img src=images/icons/icons8-linkedin-2-500.png alt="LinkedIn logo">
-              </a>
-            <a href="https://www.github.com/jessblanchard">
-              <img src="images/icons/icons8-github-500.png" alt="Github logo">
-              </a>
-            <a href="https://www.instagram.com/jessytribble">
-              <img src=images/icons/icons8-instagram-camera-500.png alt="Instagram logo">
-              </a>
-            <a href="https://www.twitter.com/jesstribble">
-              <img src= images/icons/icons8-twitter-500.png alt="Twitter logo">
-              </a>
-            <a href="contact.html">
-              <img src=images/icons/icons8-email-envelope-500.png alt="Mail icon">
-              </a>
+          <a href="https://www.linkedin.com/in/jessdesignedit" target="_blank">
+            <img src="images/icons/icons8-linkedin-2-500.png" alt="LinkedIn logo">
+            </a>
+          <a href="https://www.github.com/jessblanchard" target="_blank">
+            <img src="images/icons/icons8-github-500.png" alt="GitHub logo">
+            </a>
+          <a href="https://www.instagram.com/jessytribble" target="_blank">
+            <img src="images/icons/icons8-instagram-camera-500.png" alt="Instagram logo">
+            </a>
+          <a href="https://www.twitter.com/jesstribble" target="_blank">
+            <img src= "images/icons/icons8-twitter-500.png" alt="Twitter logo">
+            </a>
+          <a href="contact.html" target="_blank">
+            <img src="images/icons/icons8-email-envelope-500.png" alt="Mail Icon">
+            </a>
         </div>
         <p class="footer-text">Copyright © 2019, designed and developed by Jessica Blanchard</p>
       </footer>
