--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
         <h1 class="footer-header">Let's Work Together!</h1>
         <p class = "footer-email">hello@jessblanchard.design</p>
         <div class="footer-links">
-            <a href="https://www.linkedin.com/in/jessdesignedit">
+            <a href="https://www.linkedin.com/in/jessdesignedit" target="_blank">
               <img src="images/icons/icons8-linkedin-2-500.png" alt="LinkedIn logo">
               </a>
-            <a href="https://www.github.com/jessblanchard">
+            <a href="https://www.github.com/jessblanchard" target="_blank">
               <img src="images/icons/icons8-github-500.png" alt="GitHub logo">
               </a>
-            <a href="https://www.instagram.com/jessytribble">
+            <a href="https://www.instagram.com/jessytribble" target="_blank">
               <img src="images/icons/icons8-instagram-camera-500.png" alt="Instagram logo">
               </a>
-            <a href="https://www.twitter.com/jesstribble">
+            <a href="https://www.twitter.com/jesstribble" target="_blank">
               <img src= "images/icons/icons8-twitter-500.png" alt="Twitter logo">
               </a>
-            <a href="contact.html">
+            <a href="contact.html" target="_blank">
               <img src="images/icons/icons8-email-envelope-500.png" alt="Mail Icon">
               </a>
         </div>
