--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -631,21 +631,21 @@
           <h1 class="verve-footer-header">Let's Work Together!</h1>
           <p class = "verve-footer-email">hello@jessblanchard.design</p>
           <div class="verve-footer-links">
-              <a href="https://www.linkedin.com/in/jessdesignedit">
-                <img src=images/icons/icons8-linkedin-2-500.png alt="LinkedIn logo">
-                </a>
-              <a href="https://www.github.com/jessblanchard">
-                <img src="images/icons/icons8-github-500.png" alt="Github logo">
-                </a>
-              <a href="https://www.instagram.com/jessytribble">
-                <img src=images/icons/icons8-instagram-camera-500.png alt="Instagram logo">
-                </a>
-              <a href="https://www.twitter.com/jesstribble">
-                <img src= images/icons/icons8-twitter-500.png alt="Twitter logo">
-                </a>
-              <a href="contact.html">
-                <img src=images/icons/icons8-email-envelope-500.png alt="Email Icon">
-                </a>
+            <a href="https://www.linkedin.com/in/jessdesignedit" target="_blank">
+              <img src="images/icons/icons8-linkedin-2-500.png" alt="LinkedIn logo">
+              </a>
+            <a href="https://www.github.com/jessblanchard" target="_blank">
+              <img src="images/icons/icons8-github-500.png" alt="GitHub logo">
+              </a>
+            <a href="https://www.instagram.com/jessytribble" target="_blank">
+              <img src="images/icons/icons8-instagram-camera-500.png" alt="Instagram logo">
+              </a>
+            <a href="https://www.twitter.com/jesstribble" target="_blank">
+              <img src= "images/icons/icons8-twitter-500.png" alt="Twitter logo">
+              </a>
+            <a href="contact.html" target="_blank">
+              <img src="images/icons/icons8-email-envelope-500.png" alt="Mail Icon">
+              </a>
           </div>
           <p class="verve-footer-text">Copyright © 2019, designed and developed by Jessica Blanchard</p>
         </footer>
