updated homepage copy

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
 
       <div class="recent-work-header">
-        <h1>Recent Work</h1>
+        <h1>Featured Work</h1>
       </div>
 
       <section class="recent-work">
@@ -48,7 +48,7 @@
               <img class="project-logo" src="images/verve-logo.png" alt="Verve logo">
             </div>
             <p>Verve for iOS is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
-            <button onclick="window.location.href = 'projectgridversion.html';">READ MORE</button>
+            <button onclick="window.location.href = 'projectgridversion.html';">READ the case Study</button>
           </div>
         </section>
 
