--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <img class="navigation-logo" src="images/jess-logo-blue.png" alt="Jess logo" width="62" style="padding:0px;">
           </a>
         <a class="navigation-work" href="#work">Work</a>
-        <a class="navigation-about" href="about.html">About</a>
+        <a class="navigation-about" href="#about">About</a>
         <a class="navigation-resume" href="documents/jessica-blanchard-resume-v2.4.pdf" target="_blank">Resume</a>
       </header>
 
@@ -54,6 +54,7 @@
         </section>
 
       <div class="about-me-header">
+        <a name="about"></a>
         <h1>About Me</h1>
       </div>
 
