--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -27,7 +27,7 @@
               <a name="top"></a>
             </a>
           <a class="navigation-work" href="index.html#work">Work</a>
-          <a class="navigation-about" href="about.html">About</a>
+          <a class="navigation-about" href="index.html#about">About</a>
           <a class="navigation-resume" href="documents/jessica-blanchard-resume-v2.4.pdf" target="_blank">Resume</a>
         </nav>
 
