--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </a>
         <a class="navigation-work" href="#work">Work</a>
         <a class="navigation-about" href="#about">About</a>
-        <a class="navigation-resume" href="documents/jessica-blanchard-resume-v2.4.pdf" target="_blank">Resume</a>
+        <a class="navigation-resume" href="documents/jessica_blanchard_resume_v_25.pdf" target="_blank">Resume</a>
       </header>
 
       <section class="hero">
