--- a/projectgridversion.html
+++ b/projectgridversion.html
@@ -28,7 +28,7 @@
             </a>
           <a class="navigation-work" href="index.html#work">Work</a>
           <a class="navigation-about" href="index.html#about">About</a>
-          <a class="navigation-resume" href="documents/jessica-blanchard-resume-v2.4.pdf" target="_blank">Resume</a>
+          <a class="navigation-resume" href="documents/jessica_blanchard_resume_v_25.pdf" target="_blank">Resume</a>
         </nav>
 
 
