start of case study for intent partners

--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
             <p>Verve for iOS is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
             <button onclick="window.location.href = 'projectgridversion.html';">READ the case Study</button>
           </div>
+          <div class = "project-image">
+            <img class="verve-image" src="images/verve-thumbnail.png" width="323" height="323" alt="Verve preview">
+          </div>
+          <div class="project-details">
+            <div>
+              <img class="project-logo" src="images/verve-logo.png" alt="Verve logo">
+            </div>
+            <p>Verve for iOS is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
+            <button onclick="window.location.href = 'projectgridversion.html';">READ the case Study</button>
+          </div>
         </section>
 
       <div class="about-me-header">
