edits to homepage for addition of intent partner

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 
       <section class="recent-work">
           <div class = "project-image">
-            <img class="verve-image" src="images/verve-thumbnail.png" width="323" height="323" alt="Verve preview">
+            <img class="verve-image" src="intent_partners_images/intent_partners_thumbnail.png" width="323" height="323" alt="Verve preview">
           </div>
           <div class="project-details">
             <div>
-              <img class="project-logo" src="images/verve-logo.png" alt="Verve logo">
+              <img class="intent-logo" src="intent_partners_images/intent_logo.png" alt="Intent logo">
             </div>
-            <p>Verve for iOS is a cloud storage app that makes it easier for users to manage a healthy lifestyle while staying organized.</p>
-            <button onclick="window.location.href = 'projectgridversion.html';">READ the case Study</button>
+            <p>Intent Partners is a social impact consultancy that empowers businesses and consumers to work together and improve communities.</p>
+            <button onclick="window.location.href = 'intentpartners.html';">READ the case Study</button>
           </div>
           <div class = "project-image">
             <img class="verve-image" src="images/verve-thumbnail.png" width="323" height="323" alt="Verve preview">
