edits to intent case study

--- a/intentpartners.html
+++ b/intentpartners.html
@@ -363,7 +363,7 @@
               <li><p>1. View introduction and services offered</p></li>
               <li><p>2. Verify outcomes via case studies</p></li>
               <li><p>3. View the community needs map to identify opportunities to help</p></li>
-              <li><p>4. View the Intent Map showing companies with Intent</p></li>
+              <li><p>4. View the intent map showing companies with Intent</p></li>
             </ul>
         </section>
 
@@ -392,17 +392,17 @@
             <p class="intent-sketch-notes">Initial sketches served as an opportunity to begin to experiment with potential layouts of the information.</p>
         </div>
 
-        <img class="early-image" src="intent_partners_images/intial_sketches.jpg" alt="Early Sketches and Wireframes">
+        <img class="intent-sketch" src="intent_partners_images/intial_sketches.jpg" alt="Early Sketches and Wireframes">
 
         <div class="intent-wireframes">
           <p class="intent-sketch-notes">Sketches were refined to produce the first round of paper wireframes.</p>
-          <img class="wireframe4" src="intent_partners_images/paper_wireframes.jpg" alt="Landing Page Wireframe">
+          <img class="intent-paper-wireframes" src="intent_partners_images/paper_wireframes.jpg" alt="Landing Page Wireframe">
           <p class="intent-sketch-notes">Paper wireframes were used as a basis to develop digital wireframes.</p>
-          <img class="intent-wireframe" src="intent_partners_images/digital_wireframes/digital_wireframe_1.png" alt="Intent Partners Wireframe 1">
-          <img class="intent-wireframe" src="intent_partners_images/digital_wireframes/digital_wireframe_2.png" alt="Intent Partners Wireframe 1">
-          <img class="intent-wireframe" src="intent_partners_images/digital_wireframes/digital_wireframe_3.png" alt="Intent Partners Wireframe 1">
-          <img class="intent-wireframe" src="intent_partners_images/digital_wireframes/digital_wireframe_4.png" alt="Intent Partners Wireframe 1">
-          <img class="intent-wireframe" src="intent_partners_images/digital_wireframes/digital_wireframe_5.png" alt="Intent Partners Wireframe 1">
+          <img class="intent-digital-wireframes" src="intent_partners_images/digital_wireframes/digital_wireframe_1.png" alt="Intent Partners Wireframe 1">
+          <img class="intent-digital-wireframes" src="intent_partners_images/digital_wireframes/digital_wireframe_2.png" alt="Intent Partners Wireframe 1">
+          <img class="intent-digital-wireframes" src="intent_partners_images/digital_wireframes/digital_wireframe_3.png" alt="Intent Partners Wireframe 1">
+          <img class="intent-digital-wireframes" src="intent_partners_images/digital_wireframes/digital_wireframe_4.png" alt="Intent Partners Wireframe 1">
+          <img class="intent-digital-wireframes" src="intent_partners_images/digital_wireframes/digital_wireframe_5.png" alt="Intent Partners Wireframe 1">
         </div>
 
         <button class="all-wireframes" onClick="window.open('https://www.dropbox.com/sh/jfaug4v6ysqur7f/AAAUy1GTk4JySigpmZZWQ50ea?dl=0');">View all Wireframes</button>
@@ -426,22 +426,19 @@
             <h2>Branding</h2>
             <div class="brainstorming">
               <h3>Naming: Brainstorming and Mindmapping</h3>
-              <p>I engaged in brainstorming and mindmapping exercised to narrow down naming ideas and settled on Verve because it was a short moniker that embodied the clean energy and vitality the app needed to project.</p>
-              <p class="branding-p2">The branding should reflect the app’s positioning at the intersection of self care and data while maintaining a clean and sleek interface. </p>
+              <p>The client had already decided on a name and wanted to include bullhorn imagery in the branding but there was a lot of room to decide how to implement this.</p>
+              <p class="branding-p2">It was useful to think about the iconography and energy around the concepts that are inherent to the social responsibility industry.</p>
               <div class="branding-theme">
-                  <img class="branding-idea" src="images/Branding/vibrant-color.png" alt="Vibrant Color">
-                  <img class="branding-idea" src="images/Branding/gender-inclusive.png" alt="Gender Inclusive">
-                  <img class="branding-idea" src="images/Branding/simple-wordmark.png" alt="Simple wordmark">
-                  <img class="branding-idea" src="images/Branding/minimal-modern.png" alt="Minimal Modern">
-                  <img class="moodboard" src="images/Branding/moodboard.jpg" alt="Moodboard">
+                  <img class="intent-mindmap" src="intent_partners_images/mind_mapping.png" alt="mindmap">
               </div>
             </div>
             <div class="logo-design">
               <h3>Logo Design</h3>
-              <p>My initial logo sketches explored ways to incorporate a monographic “v” and imagery to indicate the cloud and data insight aspects of the service.</p>
-              <img class="logo-sketches" src="images/Branding/logo-sketches.png" alt="Logo Sketches">
-              <p>I created digital refinements of a few of the ideas and conducted an early round of preference tests for clarity on which ideas were the strongest.</P>
-              <img class="logos-round-1" src="images/Branding/Logos-Round-1/logos-round-1.svg" alt="Logo Sketches 1">
+              <p>The client wanted to include bullhorn imagery, reminiscent of marches and grassroots action in the logo. This was kept in mind when it was time to sketch early concepts.</p>
+              <img class="logo-sketches" src="intent_partners_images/logo_sketches.png" alt="Logo Sketches">
+              <p>Early sketches were preference tested for clarity on which images were most pleasing to viewers and results showed that two options  performed the best, each garnering 33%  of votes.</P>
+              <img class="intent-logo-option-1" src="intent_partners_images/option_1.png" alt="Logo option 1">
+              <img class="intent-logo-option-2" src="intent_partners_images/option_2.png" alt="Logo option 2">
               <p>Based on the results of an early preference test, I reduced my number of digital sketches and further refined them.</p>
               <img class="logos-round-1" src="images/Branding/Logos-Round-2/logos-round-2.svg" alt="Logo Sketches 2">
               <p>In a second round of preference tests and a subsequent design critique, Option 2 performed the best. While close to being a solid solution,  because of its simplicity, implementation of the V monogram and allusion to the statistical data of the Verve insights and data features, it did require some minor adjustments. </p>
