--- a/intentpartners.html
+++ b/intentpartners.html
@@ -399,10 +399,10 @@
           <img class="intent-paper-wireframes" src="intent_partners_images/paper_wireframes.jpg" alt="Landing Page Wireframe">
           <p class="intent-sketch-notes">Paper wireframes were used as a basis to develop digital wireframes.</p>
           <img class="intent-digital-wireframes" src="intent_partners_images/digital_wireframes/digital_wireframe_1.png" alt="Intent Partners Wireframe 1">
-          <img class="intent-digital-wireframes" src="intent_partners_images/digital_wireframes/digital_wireframe_2.png" alt="Intent Partners Wireframe 1">
+          <!-- <img class="intent-digital-wireframes" src="intent_partners_images/digital_wireframes/digital_wireframe_2.png" alt="Intent Partners Wireframe 1">
           <img class="intent-digital-wireframes" src="intent_partners_images/digital_wireframes/digital_wireframe_3.png" alt="Intent Partners Wireframe 1">
           <img class="intent-digital-wireframes" src="intent_partners_images/digital_wireframes/digital_wireframe_4.png" alt="Intent Partners Wireframe 1">
-          <img class="intent-digital-wireframes" src="intent_partners_images/digital_wireframes/digital_wireframe_5.png" alt="Intent Partners Wireframe 1">
+          <img class="intent-digital-wireframes" src="intent_partners_images/digital_wireframes/digital_wireframe_5.png" alt="Intent Partners Wireframe 1"> -->
         </div>
 
         <button class="all-wireframes" onClick="window.open('https://www.dropbox.com/sh/jfaug4v6ysqur7f/AAAUy1GTk4JySigpmZZWQ50ea?dl=0');">View all Wireframes</button>
@@ -439,19 +439,20 @@
               <p>Early sketches were preference tested for clarity on which images were most pleasing to viewers and results showed that two options  performed the best, each garnering 33%  of votes.</P>
               <img class="intent-logo-option-1" src="intent_partners_images/option_1.png" alt="Logo option 1">
               <img class="intent-logo-option-2" src="intent_partners_images/option_2.png" alt="Logo option 2">
-              <p>Based on the results of an early preference test, I reduced my number of digital sketches and further refined them.</p>
-              <img class="logos-round-1" src="images/Branding/Logos-Round-2/logos-round-2.svg" alt="Logo Sketches 2">
-              <p>In a second round of preference tests and a subsequent design critique, Option 2 performed the best. While close to being a solid solution,  because of its simplicity, implementation of the V monogram and allusion to the statistical data of the Verve insights and data features, it did require some minor adjustments. </p>
-              <img class="final-logo" src="images/Branding/Logo-Final/Group2.2.png" alt="Logo Final">
+              <p>Both were refined and preference tested directly against one another. While both included the bullhorn imagery, option 1 is markedly more creative, and visually engaging, but possibly too busy to meet the clean and simple aesthetic that's desires. Option 2 is clean, and easy to read but perhaps too common feeling. </p>
+              <img class="intent-logo-option-1" src="intent_partners_images/logos/option_1_refined.png" alt="Logo option 1">
+              <img class="intent-logo-option-2" src="intent_partners_images/logos/option_2_refined.png" alt="Logo option 2">
+              <p>While the results were pretty evenly divided, the comments brought some things to light. Readability was a issue in option 1 but it was preferred for its “cleverness”. Option 2 didn't flow and the hand wasn't … preferred, but it was more “readable”.  How could I keep things clever but still readable? I went back to the drawing board to rustle up new ideas.</p>
+              <img class="logo-sketches" src="intent_partners_images/logos/logos_reconsidered.jpg" alt="Logos Reconsidered">
+              <p>Ultimately a refinement of option 1 accounting for the common concerns proved the strongest option.</p>
+              <img class="final-logo" src="intent_partners_images/logos/final_logo.jpg" alt="Logo Final">
             </div>
-
         </section>
 
         <section class="branding-fullwidth2">
           <div class="typography">
             <h3>Typography</h3>
-            <p>I chose Geosans Light  as  the brand typefaces because it delicately compliments  the bold shapes of the Verve logo mark while remaining minimal and modern.</p>
-            <p>I chose  Montserrat as a  complimentary typeface for use throughout the app for its readability. As with the brand typefaces I wanted to use a font that would be minimal and modern.</P>
+            <p>The Yantramanav typeface was selected for its sans serif simplicity and superb readability at various weights.</p>
           </div>
           </section>
 
@@ -468,27 +469,27 @@
             <p>Wanting to add more dynamism and depth to my color palette, I tested user response to combining gradients. This was preferred 67% of the time.</p>
             <p>Based on client feedback, I made slight adjustments to the palette and decided to use a gradient shade of blue as the primary color, in combination with a gradient shade of pink, in combination with gray, white, black and yellow.</p>
             <div class= "colors">
-              <img class="final-colors" src="images/Branding/Colors/color1.png" alt="Brand color 1">
-              <img class="final-colors" src="images/Branding/Colors/color2.png" alt="Brand color 1">
-              <img class="final-colors" src="images/Branding/Colors/color3.png" alt="Brand color 1">
-              <img class="final-colors" src="images/Branding/Colors/color4.png" alt="Brand color 1">
-              <img class="final-colors" src="images/Branding/Colors/color5.png" alt="Brand color 1">
-              <img class="final-colors" src="images/Branding/Colors/color6.png" alt="Brand color 1">
+              <img class="intent-final-colors" src="intent_partners_images/colors/color1.png" alt="Brand color 1">
+              <img class="intent-final-colors" src="intent_partners_images/colors/color2.png" alt="Brand color 2">
+              <img class="intent-final-colors" src="intent_partners_images/colors/color3.png" alt="Brand color 3">
+              <img class="intent-final-colors" src="intent_partners_images/colors/color4.png" alt="Brand color 4">
+              <img class="intent-final-colors" src="intent_partners_images/colors/color5.png" alt="Brand color 5">
+              <img class="intent-final-colors" src="intent_partners_images/colors/color6.png" alt="Brand color 6">
+              <img class="intent-final-colors" src="intent_partners_images/colors/color7.png" alt="Brand color 7">
+              <img class="intent-final-colors" src="intent_partners_images/colors/color8.png" alt="Brand color 8">
+              <img class="intent-final-colors" src="intent_partners_images/colors/color9.png" alt="Brand color 9">
+              <img class="intent-final-colors" src="intent_partners_images/colors/color10.png" alt="Brand color 10">
             </div>
-            <p>I proceeded to prepare a full style guide that included the color palette along side additional branding guidelines such as typography, logo usage, and iconography. </p>
+            <p>A full suite of branding guidelines were defined and would continue to evolve as the project developed.</p>
             <button onClick="window.open('https://www.figma.com/proto/RfbwhkAeB4sWwogLNMTyD4co/Verve-Final-Style-Guide-and-Mockups-Prototype?node-id=0%3A1&viewport=400%2C325%2C0.04107077419757843&scaling=min-zoom');">View the Style Guide</button>
 
           </div>
-          <div class="hifi-mockups">
+          <div class="intent-hifi-mockups">
             <h3>High Fidelity Mockups</h3>
-            <p>As I created hi-fi mockups, I  discovered design elements that previously seemed to recede into the background of the app, but in actuality needed to be considered as part of a design pattern. Design features like process tracking dots and text captioning on menu icons, needed to be considered as I was developing  high fidelity mockups.</p>
+            <p>Several improvements were considered and defined moving from wireframe to high fidelity mock-up. For instance,  adding calls to action in spaces where they added usability value but weren’t decidedly necessary earlier for minimum functionality.</p>
+            <p>Choosing compelling imagery that was engaging and not over illustrative to the point of being cliche proved challenging. I chose to focus on imagery that captured the spirit and essence of the company’s modern and youthful yet mature perspective.</p>
             <div class=hifi-group>
-              <img class="hifi-pic" src="images/HiFi-Mockups/landing-page-mockup.png" alt="Landing Page Mockup">
-              <img class="hifi-pic" src="images/HiFi-Mockups/new-user-dashboard-mockup.png" alt="New User Dashboard Mockup">
-              <img class="hifi-pic" src="images/HiFi-Mockups/existing-user-dashboard-mockup.png" alt="Existing User Dashboard Mockup">
-              <img class="hifi-pic" src="images/HiFi-Mockups/product-mockup.png" alt="Product Mockup">
-              <img class="hifi-pic" src="images/HiFi-Mockups/activity-mockup.png" alt="Activity Mockup">
-              <img class="hifi-pic" src="images/HiFi-Mockups/note-view-mockup.png" alt="Note View Mockup">
+              <img class="intent-hifi-pic" src="intent_partners_images/hi-fidelity-mockups/round_1/Homepage.png" alt="Landing Page Mockup">
             </div>
 
             <button class="all-hifi" onClick="window.open('https://www.figma.com/file/yUBzhV5qy2T0qpGQpnRr6j/Verve-Hi-Fidelity-Mockup-and-Prototype?node-id=46378%3A4647');">View all Hi-Fi Mockups</button>
