edits to intent case study

--- a/intentpartners.html
+++ b/intentpartners.html
@@ -491,13 +491,38 @@
             <div class=hifi-group>
               <img class="intent-hifi-pic" src="intent_partners_images/hi-fidelity-mockups/round_1/Homepage.png" alt="Landing Page Mockup">
             </div>
-
+            <p>Revision of Hi-fidelity Mockups</p>
+            <p>Mockups were reviewed for opportunities for improvement. Recommendations primarily centered on improving typography in ways such as:</p>
+              <ul>
+                <li><p>1. Reduce the height of the header and increasing font weight for improved accessibility</p></li>
+                <li><p>2. Making Team members professional titles smaller and closer under names<p></li>
+                <li><p>3. Make footer text smaller than subscribe section<p></li>
+                <li><p>4. Ensure all text adheres to maximum characters per line guidelines<p></li>
+                <li><p>5. Use Typescale to define better typography sizing<p></li>
+              </ul>
+            <p>Additional recommendations included adding a sub-header to the hero images for a clearer introduction to the content.</p>
+            <div class=hifi-group>
+              <img class="intent-hifi-pic" src="intent_partners_images/hi-fidelity-mockups/round_2/Homepage.png" alt="Landing Page Mockup">
+            </div>
             <button class="all-hifi" onClick="window.open('https://www.figma.com/file/yUBzhV5qy2T0qpGQpnRr6j/Verve-Hi-Fidelity-Mockup-and-Prototype?node-id=46378%3A4647');">View all Hi-Fi Mockups</button>
-
           </div>
-          <div class="preference-tests">
-            <h3>Preference Testing</h3>
-            <p>There were still a few design decisions that I was uncertain about. Rather than choosing them based on my own preferences, it was important to get feedback from potential users. I preference tested various components such as button style, insights dashboard layout and landing page copywriting.</p>
+          <div class="intent-user-tests">
+            <h3>User Testing the Hi-fi Mockup</h3>
+            <p>Testing occured with two participants, who were each asked to complete five tasks according to this script:</p>
+            <ul>
+              <li><p>1. Visit the services section of the site and indicate which service you find most engaging.</p></li>
+              <li><p>2. Visit the case studies and open the case study for Something in the Water.</p></li>
+              <li><p>3. Visit the community needs map and search for local educational needs. View the need and read more information.</p></li>
+              <li><p>4. Visit the intent map and search for local concerts. View concert details and read more information.</p></li>
+              <li><p>5. Visit the contact page and write Intent Partners a message.</p></li>
+            </ul>
+            <p>My users included David Blanchard, age 34, Pharmacist, of North Plainfield, NJ, an active and experienced web user and Sophia Mckenzie, age 55, Estate Manager of Brooklyn, NY, an avid browser with limited comfort with electronic devices.</p>
+            <p>Testing indicated that tools would be better named “maps” as it better indicates to less saavy users what to expect.  Results would be better called “case studies” for the same reason. Changing these labels to be more intuitive will make it easier for an inexperienced user to navigate the site.</p>
+            <div class=hifi-group>
+              <img class="intent-hifi-pic" src="intent_partners_images/hi-fidelity-mockups/round_3/Homepage.png" alt="Landing Page Mockup">
+            </div>
+
+            <h3>Final Revisions</h3>
             <div class="test-images1">
               <img class="button-test" src="images/Preference-Testing/button-styles.png" alt="Button Styles">
               <img class="dashboard-test"  src="images/Preference-Testing/insights-dashboards.png" alt="Insights Dashboard Tests">
